--- a/src/scss/estilos.scss
+++ b/src/scss/estilos.scss
@@ -21,6 +21,8 @@ main {
 
 #controles {
   width: 20vw;
+  max-height: 100vh;
+  overflow: auto;
 }
 
 #mensaje {
@@ -55,8 +57,8 @@ video {
 
 #listaVideos {
   font-size: 0.9em;
-  margin: 0 20px;
-  padding: 0;
+  margin-left: 20px;
+  padding: 0 15px 4em 0;
   list-style: none;
 }
 
@@ -64,6 +66,7 @@ video {
   cursor: pointer;
   margin-bottom: 0.7em;
   padding: 0.3em;
+  line-break: anywhere;
 
   &:hover {
     opacity: 0.5;
