--- a/src/scss/estilos.scss
+++ b/src/scss/estilos.scss
@@ -1,3 +1,9 @@
+//Fuentes de Google
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+//Variables de fuentes
+$Roboto: 'Roboto', sans-serif;
+
 html {
   box-sizing: border-box;
   height: 100%;
@@ -35,6 +41,7 @@ main {
 }
 
 #seccionVideo {
+  min-width: 40vw;
   width: 60vw;
   height: 100vh;
   background-color: #242424;
@@ -51,12 +58,37 @@ main {
   }
 }
 
-#llamarCategorias {
-  max-width: 20vw;
+#lienzo2 {
+  width: 40vw;
+  height: 100%;
+  background-color: #242424;
+  position: relative;
+  border-left: 1px #ffffff solid;
+}
+
+#listaCategorias {
+  width: 100%;
+  height: 100vh;
+  background-color: #242424;
+  position: relative;
+  border-left: 1px #ffffff solid;
+}
+
+#tiemposAparicionCategorias {
+  max-width: 15vw;
   width: 20vw;
   height: 100vh;
-  background-color: #ffffff;
+  background-color: #242424;
   position: relative;
+  border-left: 1px #ffffff solid;
+}
+#espacioAparicionCategorias {
+  max-width: 15vw;
+  width: 20vw;
+  height: 100vh;
+  background-color: #242424;
+  position: relative;
+  border-left: 1px #ffffff solid;
 }
 
 video {
@@ -87,4 +119,44 @@ video {
 
 video::-webkit-media-controls-fullscreen-button {
   display: none;
+}
+
+.categoria {
+  padding: 10px;
+  font-family: $Roboto;
+  font-weight: bold;
+  float: left;
+  background-color: whitesmoke;
+  margin: 5px;
+  font-size: 1vw;
+  text-transform: uppercase;
+}
+
+.elementoTiempo {
+  font-family: $Roboto;
+  padding: 3px;
+  font-weight: bold;
+  float: left;
+  background-color: antiquewhite;
+  margin: 3px;
+  font-size: 0.5vw;
+  text-transform: uppercase;
+}
+
+.elementoEspacio {
+  font-family: $Roboto;
+  padding: 3px;
+  font-weight: bold;
+  float: left;
+  background-color: bisque;
+  margin: 3px;
+  font-size: 0.5vw;
+  text-transform: uppercase;
+}
+.barraRango {
+  margin: 20px 20px 20px 0;
+  color: white;
+  width: 100%;
+  justify-items: center;
+  background-color: dimgrey;
 }
