--- a/src/scss/estilos.scss
+++ b/src/scss/estilos.scss
@@ -26,9 +26,11 @@ main {
 }
 
 #controles {
-  width: 20vw;
+  width: 12vw;
   max-height: 100vh;
   overflow: auto;
+  z-index: 99;
+  margin-right: 20px;
 }
 
 #mensaje {
@@ -38,22 +40,41 @@ main {
   text-align: center;
   margin-bottom: 1em;
   border-bottom: 1px dotted;
+  visibility: visible;
+
+  &.oculto {
+    visibility: hidden;
+  }
 }
 
 #seccionVideo {
   min-width: 40vw;
-  width: 60vw;
+  width: 70vw;
   height: 100vh;
   position: relative;
 
   video {
-    height: 500px;
+    height: 100vh;
     width: auto;
+    max-width: 70vw;
+
+    &.pantallaCompleta {
+      max-width: 84vw;
+    }
   }
 
   #lienzo {
     position: absolute;
     pointer-events: none;
+    width: auto;
+    height: 100vh;
+    max-width: 70vw;
+  }
+
+  &.pantallaCompleta {
+    position: absolute;
+    width: 99vw;
+    background-color: black;
   }
 }
 
@@ -66,11 +87,20 @@ main {
 }
 
 #listaCategorias {
-  width: 100%;
+  width: 15vw;
   height: 100vh;
   background-color: #242424;
-  position: relative;
+  position: absolute;
   border-left: 1px #ffffff solid;
+  top: 0px;
+  left: 71vw;
+
+  &.pantallaCompleta {
+    position: absolute;
+    top: 0px;
+    left: 84vw;
+    width: 15%; 
+  }
 }
 
 #tiemposAparicionCategorias {
@@ -99,6 +129,11 @@ video {
   margin-left: 20px;
   padding: 0 15px 4em 0;
   list-style: none;
+  visibility: visible;
+
+  &.oculta {
+  visibility: hidden;
+  }
 }
 
 .videoBtn {
@@ -120,15 +155,38 @@ video::-webkit-media-controls-fullscreen-button {
   display: none;
 }
 
+#iconoFullScreen {
+  position: relative;
+  bottom: 61px;
+  left: 130px;
+  opacity: 0.8;
+  cursor: pointer;
+
+  img {
+    background-color: white;
+    padding: 0.2em;
+    border-radius: 3px;
+  }
+
+  &.pantallaCompleta {
+    left: 174px;
+  }
+}
+
 .categoria {
-  padding: 10px;
+  padding: 5px;
   font-family: $Roboto;
   font-weight: bold;
   float: left;
   background-color: whitesmoke;
-  margin: 5px;
+  margin: 3px;
   font-size: 1vw;
   text-transform: uppercase;
+
+  &.pantallaCompleta {
+    margin: 2px;
+    padding: 4px;
+  }
 }
 
 .elementoTiempo {
@@ -167,4 +225,14 @@ video::-webkit-media-controls-fullscreen-button {
     font-style: italic;
     font-size: 0.9em;
   }
+}
+
+.confianzaPantallaCompleta {
+  position: absolute;
+  left: 25px;
+  bottom: 70px;
+  color: white;
+  background-color: black;
+  padding: 0em 1em 0.5em 1em;
+  margin-bottom: 1em;
 }
