🐛 Arreglar tamaño lienzo en pantalla completa

--- a/src/scss/estilos.scss
+++ b/src/scss/estilos.scss
@@ -69,12 +69,17 @@ main {
     width: auto;
     height: 100vh;
     max-width: 70vw;
+
+    &.pantallaCompleta {
+      max-width: 84vw;
   }
+}
 
   &.pantallaCompleta {
     position: absolute;
     width: 99vw;
     background-color: black;
+    max-width: 99vw;
   }
 }
 
