--- a/src/scss/estilos.scss
+++ b/src/scss/estilos.scss
@@ -31,6 +31,11 @@ main {
   overflow: auto;
   z-index: 99;
   margin-right: 20px;
+display: block;
+
+&.oculto {
+  display: none;
+}
 }
 
 #mensaje {
@@ -41,10 +46,6 @@ main {
   margin-bottom: 1em;
   border-bottom: 1px dotted;
   visibility: visible;
-
-  &.oculto {
-    visibility: hidden;
-  }
 }
 
 #seccionVideo {
@@ -72,8 +73,8 @@ main {
 
     &.pantallaCompleta {
       max-width: 84vw;
+    }
   }
-}
 
   &.pantallaCompleta {
     position: absolute;
@@ -104,7 +105,7 @@ main {
     position: absolute;
     top: 0px;
     left: 84vw;
-    width: 15%; 
+    width: 15%;
   }
 }
 
@@ -135,10 +136,6 @@ video {
   padding: 0 15px 4em 0;
   list-style: none;
   visibility: visible;
-
-  &.oculta {
-  visibility: hidden;
-  }
 }
 
 .videoBtn {
