--- a/src/scss/estilos.scss
+++ b/src/scss/estilos.scss
@@ -1,8 +1,19 @@
 //Fuentes de Google
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap');
 
 //Variables de fuentes
 $Roboto: 'Roboto', sans-serif;
+$altoMenu: 0px;
+$altoContenido: calc(100vh - $altoMenu);
+
+:root {
+  --negro: #0d0917;
+  --fondo: #27184f;
+  --texto: #f56468;
+  --texto2: #ffea00;
+  --altoMenu: $altoMenu;
+}
 
 html {
   box-sizing: border-box;
@@ -21,16 +32,31 @@ body {
   padding: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 main {
   display: flex;
+  font-family: 'Martian Mono', monospace;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  font-variation-settings: 'wdth' 100;
+}
+
+#menu {
+  height: $altoMenu;
+  width: 100%;
+  background-color: var(--negro);
 }
 
 #controles {
-  width: 12vw;
-  max-height: 100vh;
+  width: 15vw;
+  max-height: $altoContenido;
   overflow: auto;
   z-index: 99;
-  margin-right: 20px;
   display: block;
 
   &.oculto {
@@ -43,91 +69,154 @@ main {
   padding: 0.5em;
   font-style: italic;
   text-align: center;
-  margin-bottom: 1em;
+  font-family: $Roboto;
   border-bottom: 1px dotted;
   visibility: visible;
 }
 
 #seccionVideo {
-  min-width: 40vw;
   width: 70vw;
-  height: 100vh;
+  height: $altoContenido;
   position: relative;
+  background-color: var(--negro);
 
   video {
-    height: 100vh;
-    width: auto;
     max-width: 70vw;
+    height: 100%;
+    width: auto;
+    margin: 0 auto;
   }
 
-  #lienzo {
+  .lienzo {
     position: absolute;
     pointer-events: none;
     width: auto;
-    height: 100vh;
-    max-width: 70vw;
+    height: $altoContenido;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    opacity: 0;
+
+    &.visible {
+      opacity: 1;
+    }
+  }
+
+  #lienzo1 {
+    z-index: 9;
   }
 }
 
-#lienzo2 {
-  width: 40vw;
-  height: 100%;
-  background-color: #242424;
-  position: relative;
-  border-left: 1px #ffffff solid;
-}
-
-#listaCategorias {
+#categorias {
   width: 15vw;
-  height: 100vh;
-  background-color: #242424;
-  position: absolute;
-  border-left: 1px #ffffff solid;
-  top: 0px;
-  left: 71vw;
+  height: $altoContenido;
+  background-color: var(--fondo);
+  color: whitesmoke;
+
+  .columnas {
+    text-align: center;
+    margin-top: 1em;
+  }
+
+  .modo {
+    cursor: pointer;
+    padding: 0.3em;
+    font-family: $Roboto;
+    opacity: 0.5;
+
+    &.activo {
+      background-color: whitesmoke;
+      color: var(--negro);
+      opacity: 1;
+    }
+
+    &:hover {
+      background-color: rgba(245, 245, 245, 0.6);
+    }
+  }
+
+  #listaCategorias {
+    font-weight: 500;
+    text-transform: capitalize;
+    padding: 1em;
+    font-size: 0.9em;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-content: flex-start;
+  }
+
+  .categoria {
+    color: var(--texto2);
+    margin: 5px;
+    padding: 7px;
+    padding-left: 10px;
+    font-size: 0.95em;
+    border: 0.5px dotted var(--texto2);
+    position: relative;
+    cursor: pointer;
+
+    .barraColor {
+      width: 4px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+    }
+  }
+
+  .contadorCategoria {
+    font-size: 0.55em;
+    margin-left: 1em;
+  }
 }
 
 #tiemposAparicionCategorias {
   max-width: 15vw;
   width: 20vw;
-  height: 100vh;
+  height: $altoContenido;
   background-color: #242424;
   position: relative;
-  border-left: 1px #ffffff solid;
 }
+
 #espacioAparicionCategorias {
   max-width: 15vw;
   width: 20vw;
-  height: 100vh;
+  height: $altoContenido;
   background-color: #242424;
   position: relative;
-  border-left: 1px #ffffff solid;
 }
 
 video {
   display: block;
+  opacity: 0;
+
+  &.visible {
+    opacity: 1;
+  }
 }
 
 #listaVideos {
-  font-size: 0.9em;
-  margin-left: 20px;
-  padding: 0 15px 4em 0;
+  font-size: 0.75em;
+  padding: 1.25em 2em;
   list-style: none;
   visibility: visible;
 }
 
 .videoBtn {
   cursor: pointer;
-  margin-bottom: 0.7em;
-  padding: 0.3em;
+  padding: 0.5em 0.3em 0.8em 0.3em;
   line-break: anywhere;
+  border-bottom: 0.5px solid;
 
   &:hover {
     opacity: 0.5;
   }
 
   &.seleccionado {
-    border: 1px dotted;
+    border: 2px dotted;
+    font-weight: 500;
   }
 }
 
@@ -140,19 +229,7 @@ video::-webkit-media-controls-fullscreen-button {
   cursor: pointer;
 }
 
-.categoria {
-  padding: 5px;
-  font-family: $Roboto;
-  font-weight: bold;
-  float: left;
-  background-color: whitesmoke;
-  margin: 3px;
-  font-size: 1vw;
-  text-transform: uppercase;
-}
-
 .elementoTiempo {
-  font-family: $Roboto;
   padding: 3px;
   font-weight: bold;
   float: left;
@@ -163,7 +240,6 @@ video::-webkit-media-controls-fullscreen-button {
 }
 
 .elementoEspacio {
-  font-family: $Roboto;
   padding: 3px;
   font-weight: bold;
   float: left;
@@ -172,6 +248,7 @@ video::-webkit-media-controls-fullscreen-button {
   font-size: 0.5vw;
   text-transform: uppercase;
 }
+
 .barraRango {
   margin: 20px 20px 20px 0;
   color: white;
@@ -195,7 +272,7 @@ video::-webkit-media-controls-fullscreen-button {
     max-width: 99vw;
 
     video,
-    #lienzo {
+    .lienzo {
       max-width: 84vw;
     }
   }
@@ -205,7 +282,7 @@ video::-webkit-media-controls-fullscreen-button {
     padding: 4px;
   }
 
-  #listaCategorias {
+  #categorias {
     position: absolute;
     top: 0px;
     left: 84vw;
