✨ Pasar lista a componentes

--- a/src/scss/estilos.scss
+++ b/src/scss/estilos.scss
@@ -305,3 +305,10 @@ video::-webkit-media-controls-fullscreen-button {
     margin-bottom: 1em;
   }
 }
+
+#espectros{ 
+  background-color: rgb(51, 128, 120);
+  padding: 0.5em;
+  color: white;
+  cursor: pointer;
+}
